// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwitchLanguage > should render properly 1`] = `
<div>
  <div
    class="form-group"
  >
    <select
      class="sc-eLqIir dmSHxF form-control"
    >
      <option
        class="sc-HzRMQ gxWMSa"
        disabled=""
        value=""
      >
        Switch Language
      </option>
    </select>
  </div>
</div>
`;

exports[`SwitchLanguage should render properly 1`] = `
<div>
  <div
    class="sc-eLqIir dKTRNe"
    gap="1rem"
  >
    <select
      class="sc-dujCx iseyOr"
      title="single-select"
    >
      <option
        class="sc-bFmjqi gTeLlR"
        disabled=""
        value=""
      >
        Switch Language
      </option>
    </select>
  </div>
</div>
`;
